[gd_scene load_steps=12 format=4 uid="uid://dh7bl3woycvkc"]

[ext_resource type="Script" uid="uid://br3fncn2rhfl2" path="res://scripts/cubeButton.gd" id="1_wr3m2"]
[ext_resource type="Material" uid="uid://opt20r3lh406" path="res://textures/mat/metal1.tres" id="2_rw5if"]
[ext_resource type="Material" uid="uid://bcuc1vlfcd7kn" path="res://textures/mat/buttonfill.tres" id="3_wk3sq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_52v1e"]
resource_name = "Material"
cull_mode = 2
vertex_color_use_as_albedo = true
albedo_color = Color(0.906332, 0.906332, 0.906332, 1)
roughness = 0.4

[sub_resource type="ArrayMesh" id="ArrayMesh_pqkn4"]
_surfaces = [{
"aabb": AABB(-0.5, 0, -0.5, 1.00001, 0.10001, 1),
"format": 34359742465,
"index_count": 36,
"index_data": PackedByteArray("AAAGAAQAAAACAAYAAwAGAAIAAwAHAAYABwAEAAYABwAFAAQABQADAAEABQAHAAMAAQACAAAAAQADAAIABQAAAAQABQABAAAA"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAAAP8jMzD0AAAC/AAAAPwAAAAAAAAC/AAAAP8jMzD0AAAA/AAAAPwAAAAAAAAA/AAAAv8jMzD0AAAC/AAAAvwAAAAAAAAC/AAAAv8jMzD0AAAA/AAAAvwAAAAAAAAA/")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_3pmdq"]
resource_name = "button_Cube"
_surfaces = [{
"aabb": AABB(-0.5, 0, -0.5, 1.00001, 0.10001, 1),
"attribute_data": PackedByteArray("AAAgPwAAAD8AACA/AAAAPwAAID8AAAA/AADAPgAAAD8AAMA+AAAAPwAAwD4AAAA/AAAgPwAAgD4AACA/AACAPgAAID8AAIA+AADAPgAAgD4AAMA+AACAPgAAwD4AAIA+AAAgPwAAQD8AACA/AABAPwAAYD8AAAA/AADAPgAAQD8AAAA+AAAAPwAAwD4AAEA/AAAgPwAAgD8AACA/AAAAAAAAYD8AAIA+AADAPgAAgD8AAAA+AACAPgAAwD4AAAAA"),
"format": 34359742487,
"index_count": 36,
"index_data": PackedByteArray("AQAUAA4AAQAHABQACgATAAYACgAXABMAFQAMABIAFQAPAAwAEAAJAAMAEAAWAAkABQAIAAIABQALAAgAEQAAAA0AEQAEAAAA"),
"material": SubResource("StandardMaterial3D_52v1e"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AAAAP8jMzD0AAAC/AAAAP8jMzD0AAAC/AAAAP8jMzD0AAAC/AAAAPwAAAAAAAAC/AAAAPwAAAAAAAAC/AAAAPwAAAAAAAAC/AAAAP8jMzD0AAAA/AAAAP8jMzD0AAAA/AAAAP8jMzD0AAAA/AAAAPwAAAAAAAAA/AAAAPwAAAAAAAAA/AAAAPwAAAAAAAAA/AAAAv8jMzD0AAAC/AAAAv8jMzD0AAAC/AAAAv8jMzD0AAAC/AAAAvwAAAAAAAAC/AAAAvwAAAAAAAAC/AAAAvwAAAAAAAAC/AAAAv8jMzD0AAAA/AAAAv8jMzD0AAAA/AAAAv8jMzD0AAAA/AAAAvwAAAAAAAAA/AAAAvwAAAAAAAAA/AAAAvwAAAAAAAAA///////9/////f///AAD/v////3//f////38AAP///7///////3///////3//f////3//f/9/////f///AAD/v////3//f////38AAP///7//f/9//3///////3//f///AAD/f/9//////////3////9///8AAP+/AAD/f/9/////fwAA////v///////f///AAD/f/9/////f/9//3////9///8AAP+/AAD/f/9/////fwAA////v/9//3//f///")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_pqkn4")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7qfxj"]
resource_name = "Material.001"
cull_mode = 2
vertex_color_use_as_albedo = true
albedo_color = Color(0.906332, 0.906332, 0.906332, 1)
roughness = 0.4

[sub_resource type="ArrayMesh" id="ArrayMesh_n0srh"]
_surfaces = [{
"aabb": AABB(-0.45, 0.05, -0.45, 0.90001, 0.10001, 0.9),
"format": 34359742465,
"index_count": 36,
"index_data": PackedByteArray("AAAGAAQAAAACAAYAAwAGAAIAAwAHAAYABwAEAAYABwAFAAQABQADAAEABQAHAAMAAQACAAAAAQADAAIABQAAAAQABQABAAAA"),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("ZmbmPpeZGT5mZua+ZmbmPs3MTD1mZua+ZmbmPpeZGT5mZuY+ZmbmPs3MTD1mZuY+ZmbmvpeZGT5mZua+Zmbmvs3MTD1mZua+ZmbmvpeZGT5mZuY+Zmbmvs3MTD1mZuY+")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_8gwhl"]
resource_name = "button_Cube_001"
_surfaces = [{
"aabb": AABB(-0.45, 0.05, -0.45, 0.90001, 0.10001, 0.9),
"attribute_data": PackedByteArray("AAAgPwAAAD8AACA/AAAAPwAAID8AAAA/AADAPgAAAD8AAMA+AAAAPwAAwD4AAAA/AAAgPwAAgD4AACA/AACAPgAAID8AAIA+AADAPgAAgD4AAMA+AACAPgAAwD4AAIA+AAAgPwAAQD8AACA/AABAPwAAYD8AAAA/AADAPgAAQD8AAAA+AAAAPwAAwD4AAEA/AAAgPwAAgD8AACA/AAAAAAAAYD8AAIA+AADAPgAAgD8AAAA+AACAPgAAwD4AAAAA"),
"format": 34359742487,
"index_count": 36,
"index_data": PackedByteArray("AQAUAA4AAQAHABQACgATAAYACgAXABMAFQAMABIAFQAPAAwAEAAJAAMAEAAWAAkABQAIAAIABQALAAgAEQAAAA0AEQAEAAAA"),
"material": SubResource("StandardMaterial3D_7qfxj"),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("ZmbmPpeZGT5mZua+ZmbmPpeZGT5mZua+ZmbmPpeZGT5mZua+ZmbmPs3MTD1mZua+ZmbmPs3MTD1mZua+ZmbmPs3MTD1mZua+ZmbmPpeZGT5mZuY+ZmbmPpeZGT5mZuY+ZmbmPpeZGT5mZuY+ZmbmPs3MTD1mZuY+ZmbmPs3MTD1mZuY+ZmbmPs3MTD1mZuY+ZmbmvpeZGT5mZua+ZmbmvpeZGT5mZua+ZmbmvpeZGT5mZua+Zmbmvs3MTD1mZua+Zmbmvs3MTD1mZua+Zmbmvs3MTD1mZua+ZmbmvpeZGT5mZuY+ZmbmvpeZGT5mZuY+ZmbmvpeZGT5mZuY+Zmbmvs3MTD1mZuY+Zmbmvs3MTD1mZuY+Zmbmvs3MTD1mZuY+//////9/////f///AAD/v////3//f////38AAP///7///////3///////3//f////3//f/9/////f///AAD/v////3//f////38AAP///7//f/9//3///////3//f///AAD/f/9//////////3////9///8AAP+/AAD/f/9/////fwAA////v///////f///AAD/f/9/////f/9//3////9///8AAP+/AAD/f/9/////fwAA////v/9//3//f///")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_n0srh")

[sub_resource type="BoxShape3D" id="BoxShape3D_n3gjg"]
size = Vector3(0.901222, 0.113579, 0.901968)

[sub_resource type="BoxShape3D" id="BoxShape3D_jtw24"]
size = Vector3(1.0011, 0.203088, 1.00571)

[node name="cubeButton" type="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)
monitorable = false
script = ExtResource("1_wr3m2")

[node name="Cube" type="MeshInstance3D" parent="."]
mesh = SubResource("ArrayMesh_3pmdq")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("2_rw5if")

[node name="Cube_001" type="MeshInstance3D" parent="."]
mesh = SubResource("ArrayMesh_8gwhl")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("3_wk3sq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.147772, 0)
shape = SubResource("BoxShape3D_n3gjg")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D2" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_jtw24")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
